--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/output.css" rel="stylesheet">
-  <title>Bornoz Bank</title>
+  <title>Bornoz Bank | Inicio</title>
   <script src="https://kit.fontawesome.com/2a09230c59.js" crossorigin="anonymous"></script>
   <script defer src="./js/dashboard.js"></script>
   <link rel="shortcut icon" href="../src/assets/logo.png" type="image/x-icon">
@@ -25,7 +25,7 @@
           <ul tabindex="0"
             class="menu menu-compact dropdown-content mt-3 p-2 shadow-lg text-black bg-white rounded-box w-52">
             <li><a href="./dashboard.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Home</a></li>
-            <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
+            <li><a href="./contactos.html" rel="noopener noreferrer" class="hover:bg-cyan-900 active:bg-cyan-900">Contactos</a></li>
             <li><a class="hover:bg-cyan-900 active:bg-cyan-900">Transferencias</a></li>
           </ul>
         </div>
@@ -35,7 +35,7 @@
       <div class="navbar-center hidden lg:flex justify-center align-middle">
         <ul class="menu menu-horizontal p-0 font-light text-black bg-white rounded-box shadow-lg">
           <li><a href="./dashboard.html" rel="noopener noreferrer" class="active:bg-cyan-900">Home</a></li>
-          <li><a class="active:bg-cyan-900">Contactos</a></li>
+          <li><a href="./contactos.html" rel="noopener noreferrer" class="active:bg-cyan-900">Contactos</a></li>
           <li><a class="active:bg-cyan-900">Transferencias</a></li>
         </ul>
       </div>
