working on contacts

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -83,28 +83,28 @@
                         <div class="form-control w-full max-w-xs mx-auto pt-4 pb-4" id="addContactForm">
                             <!--arranca nombre contacto-->
                             <label class="label">
-                                <span class="label-text text-base">Nombre Completo</span>
+                                <span class="label-text text-base text-black">Nombre Completo</span>
                             </label>
-                            <input required type="text" placeholder="Nombre completo"
+                            <input required type="text" placeholder="ej. John Doe" id="inputNameAddContact"
                                 class="input input-bordered w-full max-w-xs bg-white" minlength="4" maxlength="30" />
                             <!--termina nombre contacto-->
                             <!--arranca cbu contacto-->
                             <label class="label">
-                                <span class="label-text text-base">CBU</span>
+                                <span class="label-text text-base text-black">CBU</span>
                             </label>
-                            <input required type="email" placeholder="CBU"
+                            <input required type="email" placeholder="ej. 224455020187588991022" id="inputCBUAddContact"
                                 class="input input-bordered w-full max-w-xs bg-white" minlength="22" maxlength="22" />
                             <!--termina cbu contacto-->
                             <!--arranca alias contacto-->
                             <label class="label">
-                                <span class="label-text text-base">Alias</span>
+                                <span class="label-text text-base text-black">Alias</span>
                             </label>
-                            <input required type="password" placeholder="Alias"
+                            <input required type="password" placeholder="ej. joaco.carba.brubank" id="inputAliasAddContact"
                                 class="input input-bordered w-full max-w-xs bg-white" minlength="2" maxlength="40" />
                             <!--termina alias contacto-->
                             <!--boton añadir contacto-->
                             <button type="submit" id="submitAddContact"
-                                class="btn mt-4 btn-outline text-black border-black hover:text-white hover:border-green-400 hover:bg-green-400 mb-3">Añadir
+                                class="btn mt-4 btn-outline text-green-400 border-green-400 hover:text-white hover:border-green-400 hover:bg-green-400 mb-3">Añadir
                                 contacto</button>
                             <!--termina añadir contacto-->
                             <!--arranca alerta contacto añadido con exito-->
@@ -118,7 +118,7 @@
                             </div>
                             <!--termina alerta contacto añadido con exito-->
                             <!--arranca error en añadir contacto-->
-                            <div class="alert alert-error text-white bg-red-700 hidden" id="alertRegisterError">
+                            <div class="alert alert-error text-white bg-red-700 hidden" id="alertAddContactError">
                                 <div>
                                     <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6"
                                         fill="none" viewBox="0 0 24 24">
@@ -137,65 +137,74 @@
             </label>
             <!--termina modal añadir contactos-->
             <div class="grid grid-cols-4 gap-4">
-                <div class="bg-gray-200 p-2 rounded-box text-center">
-                    <label for="my-modal-4" class="btn modal-button font-medium">
+                <div class="text-center">
+                    <label for="my-modal-5" class="btn modal-button font-medium text-white">
                         <span class="ml-1">Joaquin Carbajal</span>
                     </label>
-                    <input type="checkbox" id="my-modal-4" class="modal-toggle" />
+                    <input type="checkbox" id="my-modal-5" class="modal-toggle" />
                     <!--cuerpo del modal-->
-                    <label for="my-modal-4" class="modal cursor-pointer">
+                    <label for="my-modal-5" class="modal cursor-pointer">
                         <label
                             class="modal-box relative w-11/12 sm:w-8/12 h-fit max-w-5xl bg-white text-black flex flex-col"
                             for="">
                             <h2 class="text-black text-center text-2xl pt-4 w-2/3 font-semibold mx-auto">Complete todos
                                 los
-                                campos para añadir un contacto nuevo</h2>
+                                campos con la informacion nueva</h2>
                             <div class="form flex flex-col items-center">
                                 <!--arranca añadir contacto-->
                                 <div class="form-control w-full max-w-xs mx-auto pt-4 pb-4" id="addContactForm">
                                     <!--arranca nombre contacto-->
                                     <label class="label">
-                                        <span class="label-text text-base">Nombre Completo</span>
-                                    </label>
+                                        <span class="label-text text-base text-black">Nombre Completo</span>
+                                    </label>                                    
                                     <input required type="text" placeholder="Nombre completo"
-                                        class="input input-bordered w-full max-w-xs bg-white" minlength="4"
-                                        maxlength="30" />
+                                            class="input input-bordered w-full max-w-xs bg-white" minlength="4"
+                                            maxlength="30" id="inputNameEditContact" />
+                                    <label class="label">
+                                        <span class="label-text-alt text-sm">Joaquin Carbajal</span>                                       
+                                    </label>
                                     <!--termina nombre contacto-->
                                     <!--arranca cbu contacto-->
                                     <label class="label">
-                                        <span class="label-text text-base">CBU</span>
+                                        <span class="label-text text-base text-black">CBU</span>
                                     </label>
                                     <input required type="email" placeholder="CBU"
                                         class="input input-bordered w-full max-w-xs bg-white" minlength="22"
-                                        maxlength="22" />
+                                        maxlength="22" id="inputCBUEditContact" />
+                                    <label class="label">
+                                        <span class="label-text-alt text-sm">224455020187588991022</span>                                       
+                                    </label>
                                     <!--termina cbu contacto-->
                                     <!--arranca alias contacto-->
                                     <label class="label">
-                                        <span class="label-text text-base">Alias</span>
+                                        <span class="label-text text-base text-black">Alias</span>
                                     </label>
                                     <input required type="password" placeholder="Alias"
                                         class="input input-bordered w-full max-w-xs bg-white" minlength="2"
-                                        maxlength="40" />
+                                        maxlength="40" id="inputAliasEditContact" />
+                                    <label class="label">
+                                        <span class="label-text-alt text-sm">joaco.carba.brubank</span>                                       
+                                    </label>
                                     <!--termina alias contacto-->
                                     <!--boton añadir contacto-->
-                                    <button type="submit" id="submitAddContact"
-                                        class="btn mt-4 btn-outline text-black border-black hover:text-white hover:border-green-400 hover:bg-green-400 mb-3">Añadir
+                                    <button type="submit" id="submitEditContact"
+                                        class="btn mt-4 btn-outline text-white hover:text-blue-500 hover:border-blue-500 hover:bg-inherit bg-blue-500 mb-3">Modificar
                                         contacto</button>
                                     <!--termina añadir contacto-->
                                     <!--arranca alerta contacto añadido con exito-->
                                     <div class="alert alert-success bg-green-400 text-white hidden"
-                                        id="alertAddContactSuccess">
+                                        id="alertEditContactSuccess">
                                         <div><svg xmlns="http://www.w3.org/2000/svg"
                                                 class="stroke-current flex-shrink-0 h-6 w-6" fill="none"
                                                 viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                     d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                                            <span>Se ha añadido correctamente el contacto.</span>
+                                            <span>Se ha modificado correctamente el contacto.</span>
                                         </div>
                                     </div>
                                     <!--termina alerta contacto añadido con exito-->
                                     <!--arranca error en añadir contacto-->
-                                    <div class="alert alert-error text-white bg-red-700 hidden" id="alertRegisterError">
+                                    <div class="alert alert-error text-white bg-red-700 hidden" id="alertEditContactError">
                                         <div>
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 class="stroke-current flex-shrink-0 h-6 w-6" fill="none"
