--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -69,7 +69,7 @@
             <div class="stat-value">ARS $<span id="balanceARSTxt"></span></div>
             <div class="stat-actions">
               <!-- abro modal retirar ARS-->
-              <label for="my-modal-4" class="btn btn-sm modal-button" id="btnRetirarARS">Retirar</label>
+              <label for="my-modal-4" class="btn btn-sm modal-button text-white" id="btnRetirarARS">Retirar</label>
               <input type="checkbox" id="my-modal-4" class="modal-toggle" />
               <label for="my-modal-4" class="modal cursor-pointer">
                 <label class="modal-box relative bg-white" for="">
@@ -95,7 +95,7 @@
               </label>
               <!-- cierro modal retirar ARS-->
               <!-- abro modal depositar ARS-->
-              <label for="my-modal-5" class="btn btn-sm modal-button" id="btnDepositarARS">Depositar</label>
+              <label for="my-modal-5" class="btn btn-sm modal-button text-white" id="btnDepositarARS">Depositar</label>
               <input type="checkbox" id="my-modal-5" class="modal-toggle" />
               <label for="my-modal-5" class="modal cursor-pointer">
                 <label class="modal-box relative bg-white" for="">
@@ -126,7 +126,7 @@
             <div class="stat-value">USD $<span id="balanceUSDTxt"></span></div>
             <div class="stat-actions">
               <!-- abro modal retirar USD-->
-              <label for="my-modal-6" class="btn btn-sm modal-button" id="btnRetirarUSD">Retirar</label>
+              <label for="my-modal-6" class="btn btn-sm modal-button text-white" id="btnRetirarUSD">Retirar</label>
               <input type="checkbox" id="my-modal-6" class="modal-toggle" />
               <label for="my-modal-6" class="modal cursor-pointer">
                 <label class="modal-box relative bg-white" for="">
@@ -152,7 +152,7 @@
               </label>
               <!-- cierro modal retirar USD-->
               <!-- abro modal depositar USD-->
-              <label for="my-modal-7" class="btn btn-sm modal-button" id="btnDepositarUSD">Depositar</label>
+              <label for="my-modal-7" class="btn btn-sm modal-button text-white" id="btnDepositarUSD">Depositar</label>
               <input type="checkbox" id="my-modal-7" class="modal-toggle" />
               <label for="my-modal-7" class="modal cursor-pointer">
                 <label class="modal-box relative bg-white" for="">
