working on modal contact edit/delet

--- a/src/contactos.html
+++ b/src/contactos.html
@@ -150,7 +150,7 @@
                             <h2 class="text-black text-center text-2xl pt-4 w-2/3 font-semibold mx-auto">Editar contacto</h2>
                             <div class="form flex flex-col items-center">
                                 <!--arranca añadir contacto-->
-                                <div class="form-control w-full max-w-xs mx-auto pt-4 pb-4" id="addContactForm">
+                                <div class="form-control w-full max-w-xs mx-auto pt-4 pb-4" id="editContactForm">
                                     <!--arranca nombre contacto-->
                                     <label class="label">
                                         <span class="label-text text-base text-black">Nombre Completo</span>
@@ -166,7 +166,7 @@
                                     <label class="label">
                                         <span class="label-text text-base text-black">CBU</span>
                                     </label>
-                                    <input required type="email" placeholder="CBU"
+                                    <input required type="text" placeholder="CBU"
                                         class="input input-bordered w-full max-w-xs bg-white" minlength="22"
                                         maxlength="22" id="inputCBUEditContact" />
                                     <label class="label">
@@ -177,7 +177,7 @@
                                     <label class="label">
                                         <span class="label-text text-base text-black">Alias</span>
                                     </label>
-                                    <input required type="password" placeholder="Alias"
+                                    <input required type="text" placeholder="Alias"
                                         class="input input-bordered w-full max-w-xs bg-white" minlength="2"
                                         maxlength="40" id="inputAliasEditContact" />
                                     <label class="label">
