--- a/src/index.html
+++ b/src/index.html
@@ -101,33 +101,41 @@
         <h2 class="text-green-400 text-center text-3xl pt-8">¡Bienvenido!</h2>
         <div class="form flex flex-col items-center">
           <!--arranca login usuario-->
-          <div class="form-control w-full max-w-xs mx-auto pt-4 px-4">
+          <div class="form-control w-full max-w-xs mx-auto pt-4 px-6 sm:px-0">
             <label class="label">
-              <span class="label-text">Nombre de usuario</span>
+              <span class="label-text text-black">Nombre de usuario</span>
             </label>
             <input required type="text" placeholder="Escriba aquí su nombre de usuario"
-              class="input input-bordered w-full max-w-xs bg-white" />
+              class="input input-bordered w-full max-w-xs bg-white" id="inputUsernameLogin"/>
           </div>
           <!--termina login usuario-->
           <!--arranca login password-->
-          <div class="form-control w-full max-w-xs mx-auto px-4">
+          <div class="form-control w-full max-w-xs mx-auto px-6 sm:px-0">
             <label class="label">
-              <span class="label-text">Contraseña</span>
+              <span class="label-text text-black">Contraseña</span>
             </label>
             <input required type="password" placeholder="Escriba aquí su contraseña"
-              class="input input-bordered w-full max-w-xs bg-white" />
+              class="input input-bordered w-full max-w-xs bg-white" id="inputPasswordLogin"/>
             <label class="label">
               <span class="label-text-alt"><label class="label cursor-pointer">
                   <input type="checkbox" checked="checked" class="checkbox-xs checkbox-primary" />
-                  <span class="label-text-alt ml-1">Recuérdame</span>
+                  <span class="label-text-alt ml-1 text-black">Recuérdame</span>
                 </label></span>
-              <span class="label-text-alt"><a href="#">¿Olvido su contraseña?</a></span>
+              <span class="label-text-alt text-black"><a href="#">¿Olvido su contraseña?</a></span>
             </label>
           </div>
           <!--termina login password-->
-          <button type="submit"
-            class="w-1/3 mt-2 btn btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Iniciar
+          <button type="submit" id="submitLogin"
+            class="w-10/12 sm:w-full max-w-xs mt-2 btn btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Iniciar
             Sesion</button>
+          <!--arranca error en login-->
+          <div class="alert alert-error text-white bg-red-700 hidden" id="alertRegisterError">
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+              <span>Error! Usuario incorrecto.</span>
+            </div>
+          </div>
+          <!--termina error en login-->
         </div>
       </div>
     </section>
