wokring login, contactos

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
             class="w-10/12 sm:w-full max-w-xs mt-2 btn btn-outline text-green-400 hover:text-white hover:border-green-400 border-green-400 hover:bg-green-400">Iniciar
             Sesion</button>
           <!--arranca error en login-->
-          <div class="alert alert-error text-white bg-red-700 hidden" id="alertRegisterError">
+          <div class="alert alert-error text-white bg-red-700 hidden mt-4 w-10/12 sm:w-full max-w-xs" id="alertLoginError">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
               <span>Error! Usuario incorrecto.</span>
